# Code-Snippit-app-dockerized

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  cleanup.py  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
code_expiry/: asgi.py  settings.py  urls.py  wsgi.py
scripts/: entrypoint.sh
snippets/: models.py  serializers.py  urls.py  views.py
snippets/management/commands/: cleanup_expired.py
snippets/migrations/: 0001_initial.py
snippets/templates/snippets/: base.html  create_snippet.html  home.html  snippet_detail.html
